# Movie-Recommendation-AI

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
frontend/src/: App.jsx  main.jsx
frontend/src/lib/: auth.js
frontend/src/pages/: AuthPage.jsx  Dashboard.jsx
src/movie_recommender/: config.py
src/movie_recommender/api/: main.py
src/movie_recommender/db/: store.py
src/movie_recommender/embeddings/: embedder.py
src/movie_recommender/recommender/: retrieve.py
