[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommender"
version = "0.1.0"
description = "Movie recommender using MovieLens + Qdrant + Ollama"
requires-python = ">=3.10"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",

    # Vector DB
    "chromadb>=0.5.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # LLM (Ollama)
    "ollama>=0.2.0",
    "httpx>=0.27.0",

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",

    # Storage
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "pymongo[srv]>=4.8.0",
    "cloudinary>=1.41.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "structlog>=24.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]
